# codemcp-cli

./: .gitignore  CONTRIBUTING.md  README.md  codecov.yml  justfile  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: check.yml
src/codemcp/: __init__.py  _version.py  api.py  cli.py  gateway.py  settings.py  tool_catalog.py
src/codemcp_cli/: __init__.py  _version.py  api.py  cli.py  executor.py  gateway.py  mcp_config.py  runtime_paths.py  settings.py  tool_catalog.py
tests/python/: test_cli.py  test_executor.py  test_gateway.py  test_package.py  test_schemas.py  test_settings.py
