[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[project]
name = "codemcp-cli"
version = "0.1.0"
authors = [{ name = "Revaz Zakalashvili" }]
description = "Standalone CodeMCP CLI runtime for typed, sandboxed MCP Code Mode"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "fastmcp==3.4.4",
  "httpx==0.28.1",
  "pydantic==2.13.4",
  "pydantic-monty==0.0.18",
  "py-key-value-aio[filetree,pydantic]==0.4.5",
  "rapidfuzz==3.14.5",
]

[project.scripts]
codemcp-cli = "codemcp_cli.cli:main"

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "package" },
  { include-group = "test" },
  "prek==0.4.8",
]
lint = [
  "mypy==2.2.0",
  "ruff==0.15.21",
  "ty==0.0.58",
]
package = [
  "check-wheel-contents==0.6.3",
  "twine==6.2.0",
]
test = [
  "pytest==8.4.2",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.0.0",
]

[project.urls]
Issues = "https://github.com/revazi/codemcp-cli/issues"
Repository = "https://github.com/revazi/codemcp-cli"

[tool.hatch.build.targets.sdist]
include = [
  "/CONTRIBUTING.md",
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codemcp_cli"]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
asyncio_mode = "auto"
pythonpath = ["src", "."]

[tool.coverage.run]
branch = true
source = ["codemcp_cli"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
required-version = "==0.15.21"
target-version = "py312"
line-length = 100
src = ["src/codemcp_cli"]
preview = true
force-exclude = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812", # Conflicts with the formatter.
  "CPY001", # Legal copyright text is not configured.
  "D100",   # Internal modules do not need module docstrings.
  "D101",   # Pydantic catalog models are self-describing.
  "D102",   # Internal methods are covered by types and focused class documentation.
  "D103",   # Internal functions are covered by types and focused module documentation.
  "D104",   # Internal packages do not need package docstrings beyond codemcp_cli/__init__.py.
  "D105",   # Magic methods do not need docstrings.
  "D107",   # Constructor contracts are expressed by typed fields.
  "D203",   # Incompatible with D211.
  "D213",   # Incompatible with D212.
  "DOC201", # Return types are explicit and checked.
  "DOC501", # Repeating raised exception types in docstrings reduces readability.
  "EM101",  # Inline exception messages are clearer at the failure site.
  "EM102",  # Inline contextual exception messages are clearer at the failure site.
  "FBT001", # JSON Schema itself may be boolean; these are not boolean control arguments.
  "TRY003", # Custom exception wrappers would obscure concise boundary failures.
]

[tool.ruff.lint.isort]
known-first-party = ["codemcp_cli"]

[tool.ruff.lint.mccabe]
# JSON Schema compilation and execution-state handling are branch-heavy by nature.
max-complexity = 20

[tool.ruff.lint.pylint]
max-args = 8
max-bool-expr = 5
max-branches = 20
max-locals = 25
max-nested-blocks = 4
max-positional-args = 6
max-public-methods = 10
max-returns = 16
max-statements = 50
max-statements-in-try = 4

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "ANN",
  "B017",
  "D",
  "INP001",
  "PLR0915",
  "PLR2004",
  "PT011",
  "PT018",
  "RUF029",
  "S101",
  "S105",
  "S106",
  "SLF001",
  "T201",
  "TC001",
  "TC003",
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
files = [
  "src/codemcp_cli",
  "tests/python/test_executor.py",
  "tests/python/test_settings.py",
  "tests/python/test_cli.py",
]
pretty = true
show_error_codes = true
show_error_code_links = true
show_error_context = true
show_error_end = true
strict_bytes = true
strict_equality_for_none = true
warn_unreachable = true
warn_unused_configs = true
enable_error_code = [
  "deprecated",
  "exhaustive-match",
  "explicit-override",
  "ignore-without-code",
  "mutable-override",
  "possibly-undefined",
  "redundant-expr",
  "truthy-bool",
  "truthy-iterable",
  "unimported-reveal",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
all = "error"

[tool.ty.analysis]
respect-type-ignore-comments = false

[tool.ty.terminal]
error-on-warning = true

[tool.uv]
package = true
